src/scss/layout/_left-panel.scss
.panel {
    background-color: $light-gray;
    color: black;
    font-size: 0.8rem;
}

/* Left-panel collapse button */
#left-panel-collapse-button {
    cursor: pointer;
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    top: 0.5rem;
    left: 100%;
    height: 3rem;
    width: 3rem;
    color: black;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    background-color: $lighter-gray;
    box-shadow: 6px 2px 10px -3px rgba(0,0,0,0.10);
    outline: 0;
    

    &.data-center-facilities {
        cursor: pointer;
        position: absolute;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        top: 4rem;
        left: 100%;
        height: 3rem;
        width: 3rem;
        color: black;
        border-top-right-radius: 4px;
        border-bottom-right-radius: 4px;
        background-color: $lighter-gray;
        box-shadow: 6px 2px 10px -3px rgba(0,0,0,0.10);
        outline: 0;
    }

    &.inactive {
        background-color: darken($lighter-gray, 10%);
    }

    @include respond-to('small') {
        // display: none;
    }
}

.left-panel {
    color: $black;
    padding: 0;
    width: calc(14vw + 16rem);
    background-color: $lighter-gray;
    position: absolute;
    box-shadow: 0 24px 15px rgba(0,0,0,0.2);
    z-index: 2;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    transition: transform 0.4s, box-shadow 0.4s;

    &:not(.collapsed) ~ .data-center-facilities-compare-panel.collapsed {
        display: none;
    }

    &.collapsed {
        transform: translate(-100%);
        box-shadow: 0 24px 15px rgba(0,0,0,0);
    }

    h1 {
        line-height: 1.3;
        color: black;
        font-size: 1.6em;
        margin: 0;
    }

    & > svg {
        display: block;
    }

    &.text {
        color: $black;
    }

    .title {
        font-size: 1.3rem;
        font-family: $headline-font;
    }

    .axis {
        .tick {
            line {
                shape-rendering: auto;
                stroke: lightgray;
                stroke-width: 1;
            }

            text {
                fill: gray;
                font-size: 0.6rem;
            }
        }

        .label {
            font-size: 0.6rem;
            text-anchor: middle;
            font-weight: regular;
            fill: grey;
        }

        path.domain {
            fill: none;
            shape-rendering: auto;
            stroke: lightgray;
        }
    }

    .country-spot-price {
        width: 100%;
    }

    .country-gauge-wrap {
        width: 64px;
        height: 64px;
        margin-left: auto;
        margin-right: auto;
    }

    @include respond-to('medium-up') {
        height: 100%; /* Should only be set on desktop */
    }

    @include respond-to('small') {
        padding-bottom: 0;
        position: relative;
        width: 100%;
    }

    &--expanded {
        width: 80%;

        @include respond-to('small') {
        width: 100%;
        }
    }
}

.left-panel-toolbar,
.left-panel-zone-details-toolbar {
    position: relative;
    padding: 1rem 1.25rem 1rem 1.25rem;
}

.left-panel-toolbar .left-panel-toolbar-back,
#left-panel-highscore-back {
    line-height: 1;
    cursor: pointer;
    font-size: 1rem;
    padding: 0.2rem;
    right: 0px;
    top: 0px;
    position: absolute;

    &:hover {
        color: $white;
    }
}

.left-panel-back-button {
    cursor: pointer;
    font-size: 1.3rem;
    position: absolute;
    left: 1.25rem;

    &:hover {
        color: $white;
    }
}

.left-panel .left-panel-toolbar-title,
.left-panel-zone-details .country-name {
    font-family: $headline-font;
    font-size: 1.2rem;
    line-height: 1.5rem;
}
.left-panel-toolbar-right-placeholder {
    width: 2.875rem;
}

.left-panel-zone-details {
    display: flex;
    line-height: 1.2rem;
    flex-direction: column;
    flex: 1;
    overflow-y: hidden;

    @include respond-to('small') {
        .detail-bottom-section{
            padding: 0;
        }
    }
}

.left-panel-zone-details-toolbar {
    @include respond-to('small') {
        position: relative;
        padding: 1rem 1.25rem 0.5rem 1.25rem;
    }
}

.left-panel-welcome {
    @include respond-to('small') {
        display: none;
    }
}

.detail-bottom-section {
    @include respond-to('small') {
        position: fixed;
        bottom: 54px;
        // Fixes issue where tab-bar is positioned behind tab-bar in the iOS app
        @supports(padding-bottom: env(safe-area-inset-bottom)) {
            bottom: 90px;
        }
        width: 100%;
        z-index: 999;
    }
}

label[for="checkbox-colorblind"] {
    font-size: smaller;
}

